new bg photo ios test

--- a/index.css
+++ b/index.css
@@ -78,7 +78,7 @@ body {
 
 /* /////////////////////////// HOME ////////////////////////// */
 
-#home {
+/* #home {
   padding: 50px;
   background-image: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
   background-repeat: no-repeat;
@@ -92,7 +92,23 @@ body {
   height: 100vh;
   background-attachment: scroll;
   min-width: 100%;
-  /* max-width: 100%; */
+} */
+
+#home {
+  padding: 50px;
+  background: url(https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80)
+    no-repeat center center fixed;
+  /* background-repeat: no-repeat; */
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  margin: 0;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  /* background-attachment: scroll; */
+  min-width: 100%;
 }
 
 #home-img {
@@ -639,8 +655,9 @@ input[type='submit'] {
 
   #home {
     padding: 50px;
-    background-image: url(https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80);
-    background-repeat: no-repeat;
+    background: url(https://images.unsplash.com/photo-1471279136892-55af5dc6895f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80)
+      no-repeat center center fixed;
+    /* background-repeat: no-repeat; */
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -649,9 +666,8 @@ input[type='submit'] {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-attachment: scroll;
+    /* background-attachment: scroll; */
     min-width: 100%;
-    /* max-width: 100%; */
   }
 }
 
