--- a/index.css
+++ b/index.css
@@ -647,10 +647,10 @@ input[type='submit'] {
     -moz-background-size: cover;
     -o-background-size: cover;
 
-    margin: 0;
+    /* margin: 0;
     align-items: center;
-    justify-content: center;
-    height: 100vh;
+    justify-content: center; */
+    height: 100%;
     /* background-attachment: scroll; */
     min-width: 100%;
   }
