new bg photo ios test

--- a/index.css
+++ b/index.css
@@ -640,18 +640,17 @@ input[type='submit'] {
     padding: 50px;
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
     background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
 
-    /* margin: 0;
+    margin: 0;
     align-items: center;
-    justify-content: center; */
-    height: 100%;
-    /* background-attachment: scroll; */
+    justify-content: center;
+    height: 100vh;
+    background-attachment: scroll;
     min-width: 100%;
   }
 }
