--- a/index.css
+++ b/index.css
@@ -42,7 +42,7 @@ body {
   justify-content: space-around;
   align-items: center;
   min-height: 8vh;
-  background-color: #7a8998;
+  background-color: #486c95;
 }
 
 .nav-links {
