--- a/index.css
+++ b/index.css
@@ -646,7 +646,7 @@ input[type='submit'] {
     width: 50%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
-    background-color: #7a8998;
+    background-color: #486c95;
     z-index: 3;
   }
 
@@ -675,6 +675,15 @@ input[type='submit'] {
     height: 100vh;
     background-attachment: scroll;
     min-width: 100%;
+  }
+
+  .am-pic-div {
+    margin: 10px 0 10px 0;
+  }
+
+  .am-pic {
+    width: 200px;
+    height: 200px;
   }
 }
 
