--- a/index.css
+++ b/index.css
@@ -242,7 +242,7 @@ section .section-header {
   transition: 1s ease;
   text-align: center;
   letter-spacing: 1px;
-  pointer-events: none;
+  /* pointer-events: none; */
 }
 
 .tags button:hover {
