--- a/index.css
+++ b/index.css
@@ -239,14 +239,31 @@ section .section-header {
   margin: 5px;
   padding: 9px;
   border-radius: 10px;
+  color: #486c95;
   transition: 1s ease;
   text-align: center;
   letter-spacing: 1px;
-  /* pointer-events: none; */
+  pointer-events: none;
+  font-size: 15px;
+  background-color: #eee;
 }
 
 .tags button:hover {
   background-color: tomato;
+}
+
+.code-link {
+  font-size: 22px;
+  color: black;
+  font-weight: 700;
+  letter-spacing: 1px;
+  transition: ease 1s;
+}
+
+.code-link:hover {
+  text-decoration: none;
+  color: gold;
+  font-size: 24px;
 }
 
 /* ////////////////////////////////////////////////////////////////////// */
