ios layout test

--- a/index.css
+++ b/index.css
@@ -651,7 +651,7 @@ input[type='submit'] {
     position: relative;
     min-width: 100%;
   }
-
+  /* ///////////////////////////////NAVBAR/////////////////////////////////////////// */
   .nav-links {
     position: absolute;
     right: 0px;
@@ -675,7 +675,9 @@ input[type='submit'] {
     display: block;
     cursor: pointer;
   }
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
+  /* ///////////////////////////////HOME/////////////////////////////////////////// */
   #home {
     padding: 50px;
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
@@ -694,6 +696,16 @@ input[type='submit'] {
     min-width: 100%;
   }
 
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+  /* ///////////////////////////////PROJECTS/////////////////////////////////////////// */
+  .home-about {
+    padding: 0;
+    width: 100%;
+  }
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+  /* ////////////////////////////////ABOUT ME/////////////////////////////////////////// */
   .am-pic-div {
     margin: 10px 0 10px 0;
   }
@@ -702,6 +714,7 @@ input[type='submit'] {
     width: 200px;
     height: 200px;
   }
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
 }
 
 .nav-active {
