--- a/index.css
+++ b/index.css
@@ -695,8 +695,8 @@ input[type='submit'] {
     /* border: blue 2px solid; */
   }
 
-  .home-img {
-    margin-top: 50px;
+  #home-img {
+    margin-top: -30px;
   }
 
   .home-about {
@@ -709,7 +709,7 @@ input[type='submit'] {
     /* border: green solid 2px; */
     /* min-width: 100%; */
     padding: 0;
-    margin-top: -100px;
+    margin-top: -140px;
   }
 
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
