--- a/index.css
+++ b/index.css
@@ -680,9 +680,11 @@ input[type='submit'] {
   /* ///////////////////////////////HOME/////////////////////////////////////////// */
   #home {
     padding: 0;
-    background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80);
-    background-repeat: no-repeat;
-
+    display: table;
+    background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80)
+      no-repeat center center fixed;
+    /* background-repeat: no-repeat; */
+    position: relative;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -691,7 +693,7 @@ input[type='submit'] {
     align-items: center;
     justify-content: center;
     height: 90vh;
-    background-attachment: scroll;
+    /* background-attachment: sc; */
     min-width: 100%;
     /* border: blue 2px solid; */
   }
