--- a/index.css
+++ b/index.css
@@ -680,9 +680,9 @@ input[type='submit'] {
   /* ///////////////////////////////HOME/////////////////////////////////////////// */
   #home {
     padding: 0;
-    display: table;
+    /* display: table; */
     background: url(https://images.unsplash.com/photo-1551033406-611cf9a28f67?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80)
-      no-repeat center center fixed;
+      no-repeat cover cover fixed;
     /* background-repeat: no-repeat; */
     position: relative;
     background-size: cover;
