--- a/index.css
+++ b/index.css
@@ -692,7 +692,7 @@ input[type='submit'] {
     align-items: center;
     justify-content: center;
     height: 90vh;
-    background-attachment: scroll;
+    background-attachment: fixed;
     min-width: 100%;
     /* border: blue 2px solid; */
   }
