--- a/index.css
+++ b/index.css
@@ -684,7 +684,7 @@ input[type='submit'] {
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
     background-repeat: no-repeat;
     /* position: relative; */
-    background-position: center;
+    background-position: cover;
     background-size: cover;
     -webkit-background-size: center;
     -moz-background-size: center;
@@ -693,7 +693,7 @@ input[type='submit'] {
     align-items: center;
     justify-content: center;
     height: 90vh;
-    background-attachment: fixed;
+    background-attachment: scroll;
     min-width: 100%;
     /* border: blue 2px solid; */
   }
