--- a/index.css
+++ b/index.css
@@ -684,7 +684,7 @@ input[type='submit'] {
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
     background-repeat: no-repeat;
     /* position: relative; */
-    background-position: cover;
+    background-position: left top;
     background-size: cover;
     -webkit-background-size: center;
     -moz-background-size: center;
