ios background img test

--- a/index.css
+++ b/index.css
@@ -42,8 +42,8 @@ body {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  min-height: 50px;
-  /* min-height: 8vh; */
+  /* min-height: 50px; */
+  min-height: 8vh;
   background-color: #486c95;
   position: fixed;
   top: 0;
@@ -90,7 +90,7 @@ body {
   background-image: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: top left;
+  background-position: left top;
   -webkit-background-size: center;
   -moz-background-size: center;
   -o-background-size: center;
@@ -634,6 +634,22 @@ input[type='submit'] {
 }
 
 @media only screen and (min-width: 900px) {
+  #home {
+    padding: 0;
+    background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
+    background-repeat: no-repeat;
+    background-position: left top 8vh;
+    background-size: cover;
+    -webkit-background-size: center;
+    -moz-background-size: center;
+    -o-background-size: center;
+    margin: 0;
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+    background-attachment: scroll;
+    min-width: 100%;
+  }
   .carousel {
     width: 45%;
     height: 380px;
