--- a/index.css
+++ b/index.css
@@ -44,7 +44,10 @@ body {
   align-items: center;
   /* min-height: 50px; */
   min-height: 8vh;
-  background-color: #486c95;
+  /* background-color: #486c95; */
+  background-color: transparent;
+  box-sizing: border-box;
+  transition: 1s;
   position: fixed;
   top: 0;
   left: 0;
@@ -52,11 +55,17 @@ body {
   z-index: 4;
 }
 
+#navbar.black {
+  background-color: #363640;
+}
+
 .nav-links {
   display: flex;
   width: 50%;
   justify-content: space-around;
   padding-top: 10px;
+
+  transition: 1s;
 }
 
 .nav-links a {
@@ -65,6 +74,14 @@ body {
   color: rgb(226, 226, 226);
   font-weight: bold;
   font-size: 14px;
+  text-transform: uppercase;
+  transition: 1s ease;
+  line-height: 40px;
+}
+
+.nav-links a:hover {
+  /* background-color: red; */
+  text-decoration: none;
 }
 
 .nav-links li {
@@ -638,7 +655,7 @@ input[type='submit'] {
     padding: 0;
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
     background-repeat: no-repeat;
-    background-position: left top 8vh;
+    background-position: left top;
     background-size: cover;
     -webkit-background-size: center;
     -moz-background-size: center;
@@ -646,7 +663,7 @@ input[type='submit'] {
     margin: 0;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     background-attachment: scroll;
     min-width: 100%;
   }
@@ -675,6 +692,7 @@ input[type='submit'] {
     min-width: 100%;
   }
   /* ///////////////////////////////NAVBAR/////////////////////////////////////////// */
+
   .nav-links {
     position: absolute;
     right: 0px;
@@ -686,7 +704,8 @@ input[type='submit'] {
     width: 50%;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
-    background-color: #486c95;
+    /* background-color: transparent; */
+    background-color: #363640;
     z-index: 3;
   }
 
@@ -707,7 +726,7 @@ input[type='submit'] {
     background: url(https://images.unsplash.com/photo-1577375729152-4c8b5fcda381?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=80);
     background-repeat: no-repeat;
     /* position: relative; */
-    background-position: left top 8vh;
+    background-position: left top;
     background-size: cover;
     -webkit-background-size: center;
     -moz-background-size: center;
@@ -715,7 +734,7 @@ input[type='submit'] {
     margin: 0;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     background-attachment: scroll;
     min-width: 100%;
     /* border: blue 2px solid; */
