--- a/index.css
+++ b/index.css
@@ -64,23 +64,30 @@ body {
   width: 50%;
   justify-content: space-around;
   padding-top: 10px;
-
   transition: 1s;
 }
 
-.nav-links a {
+#navbar .nav-links a {
   letter-spacing: 3px;
   text-decoration: none;
-  color: rgb(226, 226, 226);
+  color: #fff;
   font-weight: bold;
   font-size: 14px;
   text-transform: uppercase;
-  transition: 1s ease;
+  transition: 1s;
+  line-height: 30px;
+}
+
+#navbar.black .nav-links a {
   line-height: 40px;
 }
 
-.nav-links a:hover {
-  /* background-color: red; */
+#navbar .nav-links a:hover,
+#navbar.black .nav-links a:hover,
+#navbar .nav-links li.active a,
+#navbar .nav-links a:hover {
+  color: #dbde51;
+  line-height: 40px;
   text-decoration: none;
 }
 
