--- a/index.css
+++ b/index.css
@@ -19,7 +19,10 @@ body {
 
 .section-header {
   text-align: center;
-  margin-bottom: 25px;
+  margin: 40px 0 25px 0;
+  text-transform: uppercase;
+  letter-spacing: 7px;
+  font-weight: 700;
 }
 
 #scrolldiv {
@@ -96,8 +99,9 @@ body {
 #navbar .nav-links li.active a,
 #navbar .nav-links a:hover {
   color: #dbde51;
-  line-height: 40px;
+  line-height: 50px;
   text-decoration: none;
+  font-size: 16px;
 }
 
 .nav-links li {
@@ -173,12 +177,6 @@ body {
   opacity: 1;
 }
 
-section .section-header {
-  padding-right: 45px;
-  margin-bottom: 25px;
-  font-weight: 700;
-}
-
 #portfolio {
   padding: 0;
   margin: 0px;
@@ -186,10 +184,20 @@ section .section-header {
   background-color: #486c95;
 }
 
+#portfolio .projects {
+  margin: 0;
+}
+
+.projects .card-container {
+  padding: 0;
+}
+
 .projects .card-container .project-card {
   height: auto;
   max-width: unset;
-  margin-left: 25px;
+  /* margin-left: 25px; */
+  padding: 0;
+  margin: 0;
   background-color: #486c95;
   border: none;
   border-bottom: 1px solid black;
@@ -336,7 +344,7 @@ section .section-header {
 
 #skills-section {
   flex-direction: column;
-  padding: 50px 0 50px 0;
+  /* padding: 50px 0 50px 0; */
   background-color: #eee;
   align-items: center;
   justify-content: center;
@@ -495,15 +503,10 @@ section .section-header {
   text-align: center;
 }
 
-#solid {
+.solid {
   border-top: 1px solid lightgray;
   position: absolute;
   width: 100%;
-}
-
-.am-pic-div {
-  /* border: green 2px solid; */
-  /* align-content: center; */
 }
 
 .am-pic {
@@ -533,7 +536,6 @@ section .section-header {
 
 .contact {
   color: #ececec;
-  font-weight: 700;
 }
 
 .info-div {
