--- a/index.css
+++ b/index.css
@@ -190,7 +190,8 @@ body {
   margin: 0;
 }
 
-.projects .card-container {
+#portfolio .projects .card-container {
+  margin-bottom: 20px;
   padding: 0;
 }
 
@@ -202,7 +203,10 @@ body {
   margin: 0;
   background-color: #486c95;
   border: none;
-  border-bottom: 1px solid black;
+}
+
+#chat-card {
+  border-bottom: none;
 }
 
 .card .card-title {
@@ -220,10 +224,6 @@ body {
   text-align: center;
 
   max-width: 100%;
-}
-
-#portfolio .projects .card-container {
-  /* max-width: fit-content; */
 }
 
 .carousel {
@@ -302,6 +302,13 @@ body {
 
 .tags button:hover {
   background-color: tomato;
+}
+
+.code-link-div {
+  padding-bottom: 20px;
+  width: 80vw;
+  align-self: center;
+  border-bottom: lightgrey 1px solid;
 }
 
 .code-link {
@@ -754,7 +761,7 @@ input[type='submit'] {
 
   .home-text {
     padding: 0;
-    margin-top: -200px;
+    margin-top: -150px;
     text-align: center;
   }
 
