ios testing education section

--- a/index.css
+++ b/index.css
@@ -782,7 +782,23 @@ input[type='submit'] {
     padding-left: 8px;
     padding-top: 0px;
     height: 320px;
+    justify-self: center;
   }
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+  /* ///////////////////////////////EDUCATION/////////////////////////////////////////// */
+  #edu-section {
+    background-color: white;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    /* min-width: fit-content; */
+    min-width: 100%;
+    /* max-width: fit-content; */
+    /* border: red 1px solid; */
+  }
+
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
   /* ////////////////////////////////ABOUT ME/////////////////////////////////////////// */
