ios testing education section

--- a/index.css
+++ b/index.css
@@ -799,6 +799,13 @@ input[type='submit'] {
     /* border: red 1px solid; */
   }
 
+  #edu-section .edu-row {
+    margin: 0;
+  }
+
+  .edu-row .edu-container {
+    padding: 0;
+  }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
   /* ////////////////////////////////ABOUT ME/////////////////////////////////////////// */
