ios testing education section

--- a/index.css
+++ b/index.css
@@ -801,10 +801,17 @@ input[type='submit'] {
 
   #edu-section .edu-row {
     margin: 0;
+    border: deepskyblue 1px solid;
   }
 
   .edu-row .edu-container {
     padding: 0;
+    min-width: fit-content;
+    border: deeppink dashed 1px;
+  }
+
+  .edu-row .edu-container .edu-card {
+    border: 1px solid black;
   }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 
