--- a/index.css
+++ b/index.css
@@ -643,11 +643,6 @@ input[type='submit'] {
     margin-top: 0;
   }
 
-  /* .am-pic {
-    width: 200px;
-    height: 200px;
-  } */
-
   #contact-form input,
   #contact-form textarea {
     width: 40vw;
@@ -826,6 +821,10 @@ input[type='submit'] {
   .am-pic {
     width: 150px;
     height: 150px;
+  }
+
+  .solid {
+    opacity: 0;
   }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 }
