contact seciton ios test

--- a/index.css
+++ b/index.css
@@ -826,6 +826,20 @@ input[type='submit'] {
   .solid {
     opacity: 0;
   }
+
+  /* ///////////////////////////////////////////////////////////////////////////////////////// */
+
+  /* ///////////////////////////////CONTACT - MOBILE/////////////////////////////////////////// */
+  #contact-row {
+    padding: 0;
+  }
+
+  #contact-form input,
+  #contact-form textarea {
+    width: 90vw;
+    /* padding: 0;
+    margin: 0; */
+  }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 }
 
