--- a/index.css
+++ b/index.css
@@ -834,11 +834,13 @@ input[type='submit'] {
     padding: 0;
   }
 
+  #contact-row #contact-id {
+    padding: 0;
+  }
+
   #contact-form input,
   #contact-form textarea {
     width: 90vw;
-    /* padding: 0;
-    margin: 0; */
   }
   /* ///////////////////////////////////////////////////////////////////////////////////////// */
 }
