--- a/index.css
+++ b/index.css
@@ -753,6 +753,10 @@ input[type='submit'] {
   }
   /* ///////////////////////////////NAVBAR/////////////////////////////////////////// */
 
+  #navbar.white {
+    background-color: rgb(55 147 156 / 80%);
+  }
+
   .nav-links {
     position: absolute;
     right: 0px;
@@ -806,7 +810,7 @@ input[type='submit'] {
 
   #intro-p {
     color: white;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 700;
     letter-spacing: 1px;
     text-align: center;
@@ -827,6 +831,7 @@ input[type='submit'] {
     padding: 40px;
     display: flex;
     align-items: center;
+    text-align: center;
   }
 
   /* #home-img {
