--- a/index.css
+++ b/index.css
@@ -865,7 +865,7 @@ input[type='submit'] {
   } */
 
   #edu-section .edu-row {
-    margin: 0;
+    margin: auto;
   }
 
   .edu-row .edu-container {
