--- a/index.css
+++ b/index.css
@@ -847,7 +847,7 @@ input[type='submit'] {
     margin: 0;
   }
 
-  .edu-row .edu-container {
+  #edu-section .edu-row .edu-container {
     padding: 0;
     min-width: fit-content;
   }
