--- a/index.css
+++ b/index.css
@@ -166,7 +166,7 @@ body {
   padding: 20px;
 }
 
-#intro-btn {
+#home .home-div #intro-btn {
   text-transform: uppercase;
   margin-top: 30px;
   width: 200px;
