--- a/index.css
+++ b/index.css
@@ -782,7 +782,7 @@ input[type='submit'] {
     /* padding: 20px; */
   }
 
-  #intro-btn {
+  #home #intro-btn {
     text-transform: uppercase;
     margin-top: 30px;
     width: 220px;
