ios test on home btn

--- a/index.css
+++ b/index.css
@@ -779,10 +779,10 @@ input[type='submit'] {
     letter-spacing: 1px;
     text-align: center;
     width: 90%;
-    /* padding: 20px; */
+    padding: 20px;
   }
 
-  #home #intro-btn {
+  #home #home-div #intro-btn {
     text-transform: uppercase;
     margin-top: 30px;
     width: 220px;
@@ -796,6 +796,7 @@ input[type='submit'] {
     display: flex;
     align-items: center;
     text-align: center;
+    /* background-color: black; */
   }
 
   /* #home-img {
